--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,8 @@
+$body-bg:   #95a5a6;
+$navbar-inverse-bg:  #16a085;
+$navbar-inverse-link-color:  white;
+$brand-primary:     #e74c3c;
+$jumbotron-bg:       #ecf0f1;
+
+
 @import 'bootstrap';
